@@ -36,8 +36,8 @@ partició estesa per cada unitat física.
 
 </para><para arch="linux-any">
 
-El Linux limita les particions per unitat física a 15 en discs SCSI
-(3 de primàries, 12 de lògiques), i a 63 en una unitat IDE (3 de
+El Linux limita les particions per unitat física a 255 en discs SCSI
+(3 de primàries, 252 de lògiques), i a 63 en una unitat IDE (3 de
 primàries, 60 de lògiques). Tanmateix el sistema &debian-gnu; normal sols
 proporciona 20 dispositius per a particions, de manera que no podreu
 instal·lar-ne més de 20 si abans no creeu manualment dispositius per
