@@ -23,8 +23,8 @@ oddíl.
 
 </para><para arch="linux-any">
 
-Linux omezuje počet oddílů na disk takto: 15 oddílů pro disky SCSI
-(tři primární a dvanáct logických) a 63 oddílů na discích IDE
+Linux omezuje počet oddílů na disk takto: 255 oddílů pro disky SCSI
+(tři primární a 252 logických) a 63 oddílů na discích IDE
 (3 primární a 60 logických). Standardní &debian-gnu; nabízí na každém
 disku pouze 20 zařízení pro oblasti, takže pokud chcete využívat
 oblasti s číslem větším než 20, musíte odpovídající zařízení vytvořit
