@@ -38,8 +38,8 @@ können Sie pro Festplatte nur eine erweiterte Partition haben.
 
 </para><para arch="linux-any">
 
-Linux beschränkt die Partitionen pro Platte auf 15 bei SCSI-Festplatten
-(3 nutzbare primäre Partitionen, 12 logische Partitionen) und auf 63
+Linux beschränkt die Partitionen pro Platte auf 255 bei SCSI-Festplatten
+(3 nutzbare primäre Partitionen, 252 logische Partitionen) und auf 63
 bei IDE-Festplatten (3 nutzbare primäre Partitionen, 60 logische Partitionen).
 Allerdings bietet das normale &debian-gnu;-System nur 20 Devices
 (Geräteschnittstellen) für Partitionen, deswegen können Sie nicht auf
