@@ -41,8 +41,8 @@ il ne peut y avoir qu'une seule partition étendue par disque.
 
 </para><para arch="linux-any">
 
-Linux limite le nombre de partitions à 15 par disque SCSI (3
-partitions primaires utilisables et 12 partitions logiques dans la
+Linux limite le nombre de partitions à 255 par disque SCSI (3
+partitions primaires utilisables et 252 partitions logiques dans la
 partition étendue) et à 63
 par disque IDE (3 partitions primaires et 60 partitions logiques).
 Cependant, le système &debian-gnu; classique fournit seulement 20 périphériques
