@@ -70,8 +70,8 @@ una partizione estesa per ogni disco.
 </para><para arch="linux-any">
 
 <!--
-Linux limits the partitions per drive to 15 partitions for SCSI disks
-(3 usable primary partitions, 12 logical partitions), and 63
+Linux limits the partitions per drive to 255 partitions for SCSI disks
+(3 usable primary partitions, 252 logical partitions), and 63
 partitions on an IDE drive (3 usable primary partitions, 60 logical
 partitions). However the normal &debian-gnu; system provides
 only 20 devices for partitions, so you may not install on partitions
@@ -79,8 +79,8 @@ higher than 20 unless you first manually create devices for those
 partitions.
 -->
 
-Linux limita il numero delle partizioni per disco a 15 partizioni sui dischi
-SCSI (3 partizioni primarie e 12 partizioni logiche), e a 63 partizioni sui
+Linux limita il numero delle partizioni per disco a 255 partizioni sui dischi
+SCSI (3 partizioni primarie e 252 partizioni logiche), e a 63 partizioni sui
 dischi IDE (3 partizioni primarie, 60 partizioni logiche). Tuttavia, il sistema
 &debian-gnu; standard fornisce solo 20 file di device per rappresentare le
 partizioni, quindi se si intende creare più di 20 partizioni occorrerà prima
