@@ -37,8 +37,8 @@ drive.
 
 </para><para arch="linux-any">
 
-Linux limits the partitions per drive to 15 partitions for SCSI disks
-(3 usable primary partitions, 12 logical partitions), and 63
+Linux limits the partitions per drive to 255 partitions for SCSI disks
+(3 usable primary partitions, 252 logical partitions), and 63
 partitions on an IDE drive (3 usable primary partitions, 60 logical
 partitions). However the normal &debian-gnu; system provides
 only 20 devices for partitions, so you may not install on partitions
