@@ -39,8 +39,8 @@ espaço alocado para aquela partição em partições lógicas. Você poderá cr
 uma partição extendida por unidade.
 
 </para><para arch="linux-any">
-O Linux limita as partições por unidade a 15 partições para discos
-SCSI (3 partições primárias utilizáveis e 12 partições lógicas) e
+O Linux limita as partições por unidade a 255 partições para discos
+SCSI (3 partições primárias utilizáveis e 252 partições lógicas) e
 63 partições em uma unidade de discos IDE (3 partições primárias
 utilizáveis e 60 partições lógicas). No entanto a
 &debian-gnu; fornece apenas 20 dispositivos para partições em sua instalação
