@@ -10,6 +10,8 @@ installation-guide (2011xxxx) UNRELEASED; urgency=low
   * Make it clear that it's the ISO file which needs to be copied to the USB key.
   * Update powerpc's copy of documentation for copying ISO file on USB keys.
   * Add software speech synthesis documentation.
+  * Document SCSI partition raise to 255. Closes: Bug#644734. Thanks David
+    Prévot.
 
   [ Joey Hess ]
   * Fix typo in example preseed. Closes: #612631
@@ -41,7 +43,7 @@ installation-guide (2011xxxx) UNRELEASED; urgency=low
   * Remove dead link to Phoenix large disk BIOS faq. Closes: #638268
   * Add a pointer to the unofficial non-free CDs with firmware.
 
- -- Samuel Thibault <sthibault@debian.org>  Sun, 20 Feb 2011 21:47:31 +0100
+ -- Samuel Thibault <sthibault@debian.org>  Sat, 08 Oct 2011 17:36:51 +0200
 
 installation-guide (20110122) unstable; urgency=low
 
